--- a/components/songBar/songBar.module.css
+++ b/components/songBar/songBar.module.css
@@ -4,7 +4,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  height: 100%;
+  height: 6.5rem;
+  position: fixed;
+  bottom: 1.3rem;
+  width: 100%;
+  border-top: 1px solid white;
 }
 
 .left {
