--- a/components/terminal/terminal.module.css
+++ b/components/terminal/terminal.module.css
@@ -2,3 +2,10 @@
   height: calc(100vh - 7.8rem);
   padding: 2rem;
 }
+
+@media only screen and (max-width: 920px) {
+  .terminal {
+    padding: 1rem;
+    height: calc(100vh - 8.8rem);
+  }
+}
