style: :recycle: Refactor songBar into three components
Refactor songBar into three components, left, right and center controls

No breaking changes

--- a/components/songBar/audioControls.module.css
+++ b/components/songBar/audioControls.module.css
@@ -1,6 +1,10 @@
-.audioControlsRight, .audioControlsCenter {
+.audioControlsRight, .audioControlsCenter, .audioControlsLeft {
   display: flex;
   width:  100%;
+}
+
+.audioControlsLeft {
+  justify-content: start;
 }
 
 .audioControlsCenter {
@@ -39,5 +43,12 @@
   background-color: inherit;
 }
 
+.currentlyPlaying {
+  margin: 0 0 0.4rem 0;
+}
+
+.bottom {
+  margin: 0.4rem 0 0 0;
+}
 
 
