--- a/components/pomodoroSideBar/pomodoroSideBar.module.css
+++ b/components/pomodoroSideBar/pomodoroSideBar.module.css
@@ -1,11 +1,11 @@
 .pomodoro {
   width: 180px;
-  height: 200px;
+  height: 220px;
   position: fixed;
   top: 40%;
   right: -155px;
   z-index: 1;
-  transition: 0.5s;
+  transition: 0.3s;
   background-color: white;
   border-radius: 10px;
   display: flex;
@@ -23,8 +23,14 @@
   display: inline-block;
   vertical-align: middle;
   writing-mode: vertical-rl;
-  padding: 2rem 0;
+  padding: 2rem 0.2rem;
   height: 100%;
+  transition: all 0.2s;
+}
+
+.label:hover {
+  cursor: pointer;
+  background-color: rgb(201, 201, 201);
 }
 
 .content  {
@@ -35,4 +41,26 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.timerTitle {
+  color: black;
+  margin-top: 1rem;
+}
+
+.timer {
+  color: black;
+  margin-top: 1rem;
+}
+
+.start {
+  color: black;
+  padding: 0.2rem 0.8rem;
+  margin-top: 1rem;
+  transition: 0.2s;
+}
+
+.start:hover {
+  cursor: pointer;
+  background-color: rgb(201, 201, 201);
 }
